    * Support teletext and CC subtitles in WTV.
    * Support binding keys corresponding to non-ASCII characters.
    * Limited -endpos support for -dump*
    * Danish messages header file renamed from help_mp-dk.h to help_mp-da.h
      in order to comply with ISO 639 language code (configure language
      options will now require da instead of dk)

    Ports:
    * Windows: support file names as UTF-8 in slave mode and passing
      file names as wchar command line arguments.
    * Android: MPlayer can be run from adb shell and display videos
      via OpenGL ES.
      Note that just a bit of seeking etc. would cause reproducible
      system reboots after just a few seconds on my Galaxy S2.
    * Android: -wid is supported. This should allow using MPlayer in slave
      mode, a native window pointer needs to be passed as -wid. Untested.

    GUI:
    * Support for TV/DVB
    * Various improvements of the context menu and the preferences dialog
    * Revision of the user interface texts
    * Console message with information on deprecated (but still supported)
      entries in the skin configuration file
    * New symbol character (r) and new dynamic label variables ($D, $U, $P)
    * New items (pimage, rpotmeter)
    * Updated skins (avifile, Blue, Blue-small, Clearlooks, Corelian,
      disappearer, mentalic, mplayer_red, nativeRed, neutron, phony, plastic,
      slim, softgrip, standard, trium, tvisor, xanim)
    * Video can be rotated
    * New GUI message: evSetRotation

  1.1: "We gave up on 1.0"

    Decoders:
    * FFmpeg AAC decoder is now preferred over libfaad2 and the internal
      libfaad2 forked copy has been removed in its favor

    Demuxers:
    * experimental support for using binary Quicktime codecs with -demuxer lavf.
    * correct runtime and average bitrate for VBR (variable bitrate) MP3

    Filters:
    * delogo: allow to change the rectangle based on the time.
    * lavfi: libavfilter filter graphs (experimental).

    Other: